fix amount bugs for include

--- a/beapi.tex
+++ b/beapi.tex
@@ -69,7 +69,7 @@ La generación exhaustiva de todas las secuencias de prueba factibles a partir d
 
 En primer lugar, \textsf{BEAPI} ejecuta secuencias de prueba y descarta aquellas que producen excepciones que violan las reglas de uso de la API, como \emph{IllegalArgumentException} e \emph{IllegalStateException} en Java.
 
-En segundo lugar, \textsf{BEAPI} implementa la técnica de coincidencia de estado, la cual descarta secuencias de métodos que generan estructuras que ya han sido creadas por secuencias de métodos exploradas previamente. Esta técnica se describe en detalle en la sección \ref{sec:stateMatching}.
+En segundo lugar, \textsf{BEAPI} implementa la técnica de coincidencia de estado, la cual descarta secuencias de métodos que generan estructuras que ya han sido creadas por secuencias de métodos exploradas previamente. Esta técnica se describe en detalle en la sección \ref{sec:state-matching}.
 
 En tercer lugar, \textsf{BEAPI} utiliza un subconjunto de las rutinas de la API para crear las secuencias de prueba. Este subconjunto se identifica mediante un algoritmo de búsqueda greedy y una función de valoración que tiene en cuenta qué subconjunto permite crear la mayor cantidad de objetos utilizando \textsf{BEAPI} en el menor tiempo posible. Este proceso se detalla en el capítulo \ref{cap:builders}.
 
@@ -121,7 +121,7 @@ omit.fields=NCL.DEFAULT_MAXIMUM_CACHE_SIZE
 La definición de los alcances en \textsf{Korat} implica proporcionar dominios de datos acotados para las clases y campos de NCL, ya que \textsf{Korat} explora el espacio de estado de los candidatos factibles de NCL y produce el conjunto de estructuras que satisfacen repOK como resultado. En cambio, \textsf{BEAPI} explora el espacio de búsqueda de secuencias de prueba (acotadas) que se pueden formar mediante llamadas a la API de \texttt{NCL}. Por lo tanto, tenemos que proporcionar dominios de datos para los tipos primitivos utilizados para realizar dichas llamadas y un límite en el tamaño máximo de las estructuras que queremos mantener de las generadas por esas llamadas de API. Un archivo de configuración de ejemplo que define los alcances de \textsf{BEAPI} para el estudio de caso de \texttt{NCL} se muestra en la Figura~\ref{fig:NCL-fin-BEAPI}. El parámetro \texttt{max.objects} especifica el número máximo de objetos diferentes (alcanzables desde la raíz) que se permite que una estructura tenga. Las secuencias de prueba que crean una estructura que contiene un número mayor de objetos diferentes (de cualquier clase) que \texttt{max.objects} se descartarán (y también la estructura corriente). En nuestro ejemplo, esto implica que \textsf{BEAPI} no creará NCL con más de 3 nodos. A continuación, hay que especificar los valores que \textsf{BEAPI} utilizará para invocar las rutinas de API que toman parámetros de tipo primitivo (por ejemplo, elementos para insertar en la lista, etc.). El parámetro \texttt{int.range} permite especificar un rango de enteros, que va desde 0 hasta 2 en la Figure~\ref{fig:NCL-fin-BEAPI}. También se pueden especificar dominios para otros tipos primitivos como flotantes, dobles y cadenas describiendo sus valores por extensión. Por ejemplo, la figura define \texttt{str1}, \texttt{str2} y \texttt{str3} como los valores factibles para los parámetros de tipo String. Además, podemos informar a \textsf{BEAPI} qué campos relevantes considerar para la canonización de la estructura o qué campos de las estructuras omitir (\texttt{omit.fields}). Esto permite al usuario controlar el proceso de coincidencia de estados. Por ejemplo, descomentando la línea 4, haria que \textsf{BEAPI} omitiera el tamaño máximo predeterminado de la caché en la coincidencia de estados, que en nuestro ejemplo es una constante inicializada en 20 en el constructor de la clase. En este caso, omitir el campo no cambia nada en términos de las diferentes estructuras generadas por \textsf{BEAPI}, pero en otros casos, omitir campos puede ser importante. La configuración de la Figura 2 es suficiente para que \textsf{BEAPI} genere NCL con un máximo de 3 nodos, que contienen enteros del 0 al 2 como valores, lo que nos permitió imitar las estructuras generadas por Korat para los mismos ámbitos (algunas líneas están comentadas porque no son necesarias para esto). Los archivos de configuración utilizados en nuestra sección experimental son similares al que se muestra aquí.
 
 \section{State Matching}
-\label{sec:stateMatching}
+\label{sec:state-matching}
 
 En la generación de pruebas con \textsf{BEAPI} a menudo muchas secuencias de prueba producen la misma estructura, por ejemplo, insertar un elemento en una lista y luego eliminarlo. \textsf{BEAPI} asume que las ejecuciones de métodos son deterministas: cualquier ejecución de una rutina con las mismas entradas produce los mismos resultados. Observamos que, para cada estructura distinta s, solo necesitamos guardar la primera secuencia de prueba que genera \texttt{s} (y la estructura en sí). Todas las secuencias de prueba generadas posteriormente que también crean \texttt{s} pueden ser descartadas. Nótese que, como \textsf{BEAPI} trabaja extendiendo secuencias de prueba previamente generadas (ver seccion TODO ????), si guardamos muchas secuencias de prueba para la misma estructura, todas estas secuencias tendrían que ser extendidas con nuevas rutinas en iteraciones posteriores de \textsf{BEAPI}, lo que resultaría en muchos cálculos innecesarios. Por lo tanto, implementamos la coincidencia de estados en \textsf{BEAPI} de la siguiente manera. Almacenamos todas las estructuras producidas hasta ahora por \textsf{BEAPI} en una forma canónica (ver más abajo). Después de ejecutar la última rutina \texttt{r(p$_1$,..,p$_k$)} de una nueva secuencia de prueba generada \texttt{T}, comprobamos si alguno de los parámetros de \texttt{r} tiene una estructura no vista antes (no almacenada). Si T no crea ninguna estructura nueva, se descarta. De lo contrario, \texttt{T} y las nuevas estructuras que genera son almacenadas por \textsf{BEAPI}.
 
