--- a/evaluacion.tex
+++ b/evaluacion.tex
@@ -385,7 +385,7 @@ Class & Method & Scope &
 
 \end{tabular}%
 \caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos builders.}
-\label{tab:result2s-jpf}
+\label{tab:results2-jpf}
  
 \end{table}
 
@@ -449,11 +449,6 @@ Class & Method & Scope &
 \end{table}
 
 
-
-
-
-
-\\
 
 \section{BEAPI}
 
