--- a/main.tex
+++ b/main.tex
@@ -1,26 +1,24 @@
 %\documentclass[10pt]{report} %twoside para impresion final 
 \documentclass[11pt,a4paper,openany]{report} %a4paper,
+\usepackage[spanish]{babel}
 
 \makeatletter
-\renewcommand*\@argarraycr{\let\@tempa\relax%
-  \ifnum0=`{\fi}\@argarraycr@}
-\makeatother
+
 
 % Note: Make all your adjustments in here
 \input{classicthesis-config}
-\usepackage{array}
-\usepackage{xcolor}
-\usepackage{tikz}
-\usepackage{multirow}
-\usepackage{underscore}
-\usepackage[spanish]{babel}
+% \usepackage{array}
+% \usepackage{xcolor}
+% \usepackage{tikz}
+% \usepackage{multirow}
+% \usepackage{underscore}
 \usepackage{titletoc}
-\usepackage{tocloft}
-\usepackage{fancyhdr}
-\usepackage{lineno}     % Line numbers with e.g. the linenumbers environment
-\usepackage{sectsty}    % \allsectionsfont{}, \chapterfont{}, \sectionfont{}
-\usepackage[misc]{ifsym}
-\usepackage{tikz}
+% \usepackage{tocloft}
+% \usepackage{fancyhdr}
+% \usepackage{lineno}     % Line numbers with e.g. the linenumbers environment
+% \usepackage{sectsty}    % \allsectionsfont{}, \chapterfont{}, \sectionfont{}
+% \usepackage[misc]{ifsym}
+% \usepackage{tikz}
 
  % Add new own commands
 \newcommand{\cacho}{\textcolor{red}}
@@ -51,14 +49,14 @@
   {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
 \titlespacing*{\chapter}{0pt}{50pt}{40pt}
 % Configuración del estilo de página
-\fancypagestyle{mypagestyle}{
-    \fancyhf{} % Limpiar encabezado y pie de página
-    \renewcommand{\headrulewidth}{0pt} % Eliminar la línea horizontal del encabezado
-    \fancyfoot[C]{\thepage} % Número de página alineado a la derecha en el pie de página
-}
+% \fancypagestyle{mypagestyle}{
+%     \fancyhf{} % Limpiar encabezado y pie de página
+%     \renewcommand{\headrulewidth}{0pt} % Eliminar la línea horizontal del encabezado
+%     \fancyfoot[C]{\thepage} % Número de página alineado a la derecha en el pie de página
+% }
 
 % Aplicar el estilo de página a todo el documento
-\pagestyle{mypagestyle}
+% \pagestyle{mypagestyle}
 
 \babelhyphenation[spanish]{Node-Caching-Linked-List}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
@@ -81,10 +79,11 @@
         numbers=left,
         xleftmargin=.05\textwidth
       }
-\usepackage{algorithm}
-\usepackage{algorithmicx}
-\usepackage{algorithm2e}
-\usepackage{algorithmic}
+% \usepackage{algorithm}
+% \usepackage{algorithmicx}
+% \usepackage{algorithm2e}
+% \usepackage{algorithmic}
+\usepackage[linesnumbered,ruled,vlined,spanish,onelanguage]{algorithm2e}
 
 \lstnewenvironment{algorithm1}[1][] %defines the algorithm listing environment
 {   
@@ -125,38 +124,44 @@
 % ********************************************************************
 % Frontmatter
 \include{titlepage-famaf}
-\chapter*{}
+% \chapter*{}
 \pagenumbering{Roman} % para comenzar la numeracion de paginas en numeros romanos
-\begin{flushright}
-\textit{}
-\end{flushright}
+
 \include{resumen}
+
 % \pagenumbering{roman}
 % \pagestyle{plain}
+
 \include{agradecimientos}
+\pagestyle{empty}
+
 \tableofcontents % indice de contenidos
 
-\cleardoublepage
 % \listoffigures
 %\cleardoublepage
 % \listoftables
 % \pagestyle{scrheadings}
 %\cleardoublepage
+
 % ********************************************************************
 % Mainmatter
-\lstset{basicstyle=\ttfamily,showstringspaces=false}
+% \lstset{basicstyle=\ttfamily,showstringspaces=false}
 % \pagestyle{headings}
-\cleardoublepage
+\clearpage
 \pagenumbering{arabic} % para empezar la numeración con números
-\setcounter{page}{7}
+\setcounter{page}{5}
 
 \include{introduccion}
-\cleardoublepage
+\clearpage
+
 \include{preliminaries}
+
 \include{builders}
+
 \include{beapi}
+
 \include{evaluacion}
-\include{Builders Identification}
+
 \include{conclusiones}
 % \include{trabajofuturo}
 
