Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %\documentclass[10pt]{report} %twoside para impresion final 
-\documentclass[11pt,a4paper,openany]{report} %a4paper,
+\documentclass[12pt,a4paper,openany]{report} %a4paper,
 \usepackage[spanish]{babel}
 
 \makeatletter
@@ -46,7 +46,7 @@
 
 %Formato para chapter
 \titleformat{\chapter}[display]
-  {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
+  {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{}{}
 \titlespacing*{\chapter}{0pt}{50pt}{40pt}
 % Configuración del estilo de página
 % \fancypagestyle{mypagestyle}{
